Fixed alignment of "Edit" control in read mode

--- a/pl-input-decorator.css
+++ b/pl-input-decorator.css
@@ -7,7 +7,7 @@
 }
 
 #read {
-	padding: 1.25em 0 1em .75em;
+	padding: 0.5em 0 0.25em;
 	min-width: 0px;
 	white-space: nowrap;
 	box-sizing: border-box;
